# txukun-cli

./: .gitignore  PROJECT.md  README.md  pyproject.toml  txukun.py
.github/workflows/: test.yml
data/: eu-words-freq.txt  eu-words.txt
tests/: test_cappunct_long.py  test_cappunct_trace.py  test_txukun.py
tests/gec-benchmark/: bert_rerank.py  build_eval_dataset.py  compare_onnx.py  confidence_per_model.py  confidence_sweep.py  detect.py  detect_analysis.py  eval.py  eval_dataset.json  export_berteus_onnx.py  export_browser_cases.py  grid_search_onnx.py  grid_search_onnx_model.py  lm_rerank.py  quantize_int4.py  run_eval.py  test_gpt2_realword.py  test_latxa_realword.py  test_latxa_realword2.py  test_latxa_realword3.py  test_realword.py  tier1.py  typo_gen.py  validate_onnx.py
tests/gec-benchmark/elhuyar/: Dea_multi.tsv  Dea_none.tsv  Dea_single.tsv  Dem_multi.tsv  Dem_none.tsv  Dem_single.tsv  ELHUYAR_README.txt
txukun_lib/: __init__.py  analyze.py  bert.py  cappunct.py  diff.py  errors.py  grammar.py  markdown.py  spelling.py
