[project]
name = "txukun-cli"
version = "0.1.0"
description = "Basque text capitalization, punctuation, and spell checker CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "optimum[onnxruntime]>=1.0.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# LM re-ranking benchmark — not needed for normal CLI use
bench = [
    "llama-cpp-python>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
